--- a/package.json
+++ b/package.json
@@ -8,20 +8,27 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "json-server": "json-server --watch db.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
+    "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.0.4",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.4",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "devextreme": "^17.2.4",
+    "devextreme-angular": "^17.2.4",
+    "json-server": "^0.12.1",
+    "material-components-web": "^0.28.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
