--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angularfire2": "^5.0.0-rc.4",
     "core-js": "^2.4.1",
+    "csvtojson": "^1.1.9",
     "devextreme": "^17.2.4",
     "devextreme-angular": "^17.2.4",
+    "firebase": "^4.9.0",
     "json-server": "^0.12.1",
     "material-components-web": "^0.28.0",
+    "ngx-papaparse": "^2.0.4",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -38,7 +42,7 @@
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.96",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
