--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
-    "@angular/cdk": "^5.0.4",
+    "@angular/cdk": "^5.2.1",
+    "@angular/cli": "^1.6.2",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
-    "@angular/material": "^5.0.4",
+    "@angular/material": "^5.2.1",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular2-text-mask": "^8.0.4",
     "angularfire2": "^5.0.0-rc.4",
     "core-js": "^2.4.1",
     "csvtojson": "^1.1.9",
@@ -32,12 +34,13 @@
     "firebase": "^4.9.0",
     "json-server": "^0.12.1",
     "material-components-web": "^0.28.0",
+    "moment": "^2.20.1",
     "ngx-papaparse": "^2.0.4",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.2",
+    "@angular/cli": "^1.6.2",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
