--- a/package.json
+++ b/package.json
@@ -29,16 +29,22 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "amazon-cognito-identity-js": "^2.0.1",
+    "angular2-csv": "^0.2.5",
     "angular2-text-mask": "^8.0.4",
+    "angular5-csv": "^0.2.7",
     "angularfire2": "^5.0.0-rc.4",
     "core-js": "^2.4.1",
     "csvtojson": "^1.1.9",
     "devextreme": "^17.2.4",
     "devextreme-angular": "^17.2.4",
+    "dragula": "^3.7.2",
     "firebase": "^4.9.0",
     "json-server": "^0.12.1",
     "material-components-web": "^0.28.0",
     "moment": "^2.20.1",
+    "ng2-dragula": "^1.5.0",
+    "ngx-chips": "^1.6.7",
     "ngx-loading": "^1.0.14",
     "ngx-papaparse": "^2.0.4",
     "rxjs": "^5.5.2",
@@ -64,6 +70,7 @@
     "source-map-explorer": "^1.5.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
+    "tslint-config-prettier": "^1.9.0",
     "typescript": "~2.4.2",
     "webpack-bundle-analyzer": "^2.10.0"
   }
